--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="email">Email us at: <a href="mailto:grow@esycrux.com">grow@esycrux.com</a></div>
+        <div class="email">Email: <a href="mailto:grow@esycrux.com">grow@esycrux.com</a></div>
     </div>
 </body>
 </html>
