--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            flex-direction: column;
         }
 
         .content {
             text-align: center;
+            max-width: 70%; /* Setting a width to content */
+            margin-bottom: 50px; /* Distance from the social icons */
+        }
+
+        /* Title and Email with the same width */
+        h1, .email-link {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 100%;
         }
 
         /* Email styles */
         .email-link {
-            background-color: black;
-            padding: 5px 10px;
-            color: white;
+            color: black;
             display: inline-block;
             margin: 10px 0;
         }
@@ -53,12 +62,12 @@
         <a class="email-link" href="mailto:grow@esycrux.com">
             grow<span>@</span>esycrux<span>.</span>com
         </a>
-        <div class="social-icons">
-            <!-- Font Awesome icons for social links -->
-            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+    </div>
+    <div class="social-icons">
+        <!-- Font Awesome icons for social links -->
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     </div>
 </body>
 
