--- a/index.html
+++ b/index.html
@@ -23,23 +23,19 @@
 
         .content {
             text-align: center;
-            max-width: 70%; /* Setting a width to content */
-            margin-bottom: 50px; /* Distance from the social icons */
+            max-width: 70%;
+            margin-bottom: 30px; /* Adjusted distance from the social icons */
         }
 
-        /* Title and Email with the same width */
-        h1, .email-link {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            max-width: 100%;
+        h1 {
+            margin-bottom: 10px; /* Reduced space between title and email */
         }
 
         /* Email styles */
         .email-link {
             color: black;
+            font-size: 1.8em; /* Increased font size */
             display: inline-block;
-            margin: 10px 0;
         }
 
         .email-link span {
@@ -72,4 +68,3 @@
 </body>
 
 </html>
-
