--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
 
         .content {
             text-align: center;
-            max-width: 70%;
             margin-bottom: 30px; /* Adjusted distance from the social icons */
         }
 
         h1 {
-            margin-bottom: 10px; /* Reduced space between title and email */
+            margin-bottom: 5px; /* Slightly reduced space between title and email */
+            font-size: 2.5em; /* Adjusted font-size */
         }
 
         /* Email styles */
         .email-link {
             color: black;
-            font-size: 1.8em; /* Increased font size */
+            font-size: 2.2em; /* Adjusted font size */
             display: inline-block;
+            white-space: nowrap; /* Prevents the email from breaking into multiple lines */
         }
 
         .email-link span {
