--- a/index.html
+++ b/index.html
@@ -23,29 +23,29 @@
 
         .content {
             text-align: center;
-            margin-bottom: 30px; /* Adjusted distance from the social icons */
+            margin-bottom: 50px; /* Increased margin for more space between content and icons */
         }
 
         h1 {
-            margin-bottom: 5px; /* Slightly reduced space between title and email */
-            font-size: 2.5em; /* Adjusted font-size */
+            margin-bottom: 5px;
+            font-size: 2.5em;
         }
 
         /* Email styles */
         .email-link {
             color: black;
-            font-size: 2.2em; /* Adjusted font size */
+            font-size: 2.2em;
             display: inline-block;
-            white-space: nowrap; /* Prevents the email from breaking into multiple lines */
+            white-space: nowrap;
         }
 
         .email-link span {
-            color: #FF69B4; /* candy-pink using a HEX approximation */
+            color: #FF69B4;
         }
 
         /* Social icons with links */
         .social-icons a {
-            color: #FF69B4; /* candy-pink using a HEX approximation */
+            color: #FF69B4;
             margin: 0 10px;
             font-size: 24px;
             text-decoration: none;
