--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         /* Social icons with links */
         .social-icons a {
-            color: #FF69B4;
+            color: black;
             margin: 0 10px;
             font-size: 24px;
             text-decoration: none;
