--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         }
 
         .email-link span {
-            color: #FF69B4;
+            color: black;
         }
 
         /* Social icons with links */
