--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
 <body>
     <div class="content">
         <h1>Reach your potential</h1>
-        <a class="email-link" href="mailto:grow@esycrux.com">
-            grow<span>@</span>esycrux<span>.</span>com
+        <a class="email-link" href="esy.crux@gmail.com">
+            esy.crux@gmail.com.</span>com
         </a>
     </div>
     <div class="social-icons">
         <!-- Font Awesome icons for social links -->
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/esycrux/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/esycrux_photography/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/esy.crux" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com/in/esycrux/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
     </div>
 </body>
 
