--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="content">
         <h1>Reach your potential</h1>
         <a class="email-link" href="esy.crux@gmail.com">
-            esy.crux@gmail.com.</span>com
+            esy.crux@gmail.com.</span>
         </a>
     </div>
     <div class="social-icons">
