--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <body>
     <div class="content">
         <h1>Reach your potential</h1>
-        <a class="email-link" href="esy.crux@gmail.com">
-            esy.crux@gmail.com.</span>
+        <a class="email-link" href="mailto:esy.crux@gmail.com">
+            esy.crux@gmail.com</span>
         </a>
     </div>
     <div class="social-icons">
