--- a/index.html
+++ b/index.html
@@ -55,17 +55,7 @@
 
 <body>
     <div class="content">
-        <h1>Reach your potential</h1>
-        <a class="email-link" href="mailto:esy.crux@gmail.com">
-            esy.crux@gmail.com</span>
-        </a>
-    </div>
-    <div class="social-icons">
-        <!-- Font Awesome icons for social links -->
-        <a href="https://www.instagram.com/esycrux/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.instagram.com/esycrux_photography/" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.facebook.com/esy.crux" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.linkedin.com/in/esycrux/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <h1>You know what to do...</h1>
     </div>
 </body>
 
