--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
             margin-bottom: 20px;
         }
 
-        a.phone-number {
+        .additional-message {
+            font-size: 1em;
             color: black;
-            font-size: 1.5em;
+            margin-top: 10px;
+        }
+
+        .phone-number {
+            color: black;
             text-decoration: none;
         }
 
-        a.phone-number:hover {
+        .phone-number:hover {
             text-decoration: underline;
         }
     </style>
@@ -36,18 +41,20 @@
 
 <body>
     <div class="content">
-        <h1 id="message">You know what to do...</h1>
+        <h1>You know what to do...</h1>
+        <div id="additional-message-container"></div>
     </div>
 
     <script>
         console.log("Page loaded. Timer started for 1 minute.");
 
-        // Function to change the text after 1 minute (60,000 milliseconds)
+        // Function to add the additional message after 1 minute (60,000 milliseconds)
         setTimeout(() => {
-            console.log("Timer finished. Updating message.");
-            const messageElement = document.getElementById('message');
-            messageElement.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="tel:+420607980560">+420 607 980 560</a> and we can do something about it. <br><strong>Esy</strong>';
-            console.log("Message updated successfully.");
+            console.log("Timer finished. Adding additional message.");
+            const messageContainer = document.getElementById('additional-message-container');
+            messageContainer.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="tel:+420607980560">+420 607 980 560</a>.';
+            messageContainer.className = 'additional-message';
+            console.log("Additional message added successfully.");
         }, 60000); // 1 minute in milliseconds
 
         // Debugging info for user interactions
