--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         setTimeout(() => {
             console.log("Timer finished. Adding additional message.");
             const messageContainer = document.getElementById('additional-message-container');
-            messageContainer.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="tel:+420607980560">+420 607 980 560</a>.';
+            messageContainer.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="https://wa.me/420607980560" target="_blank">+420 607 980 560</a>.';
             messageContainer.className = 'additional-message';
             console.log("Additional message added successfully.");
         }, 60000); // 1 minute in milliseconds
