--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         .phone-number i {
             color: #25D366; /* WhatsApp green */
             font-size: 1.2em;
+            vertical-align: middle; /* Align the icon with the text baseline */
         }
 
         .phone-number:hover {
