--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         // Function to add the additional message after 1 minute (60,000 milliseconds)
         setTimeout(() => {
             const messageContainer = document.getElementById('additional-message-container');
-            messageContainer.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="https://wa.me/420607980560" target="_blank"><i class="fab fa-whatsapp"></i> +420 607 980 560</a>.';
+            messageContainer.innerHTML = 'Still here? So drop me a message on <a class="phone-number" href="https://wa.me/420607980560" target="_blank"><i class="fab fa-whatsapp"></i> +420 607 980 560</a>. Esy';
             messageContainer.className = 'additional-message';
         }, 60000); // 1 minute in milliseconds
     </script>
